# study_lang

./: .env.example  .gitignore  CLAUDE.md  README.md  STRUCTURE.md  docker-compose.yml
backend/: .gitignore  CLAUDE.md  README.md  STRUCTURE.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02b0c47afa6e_phase4_initial.py  23e1e562d141_auto_20260602_154502.py  a288f71d24ae_auto_20260617_172354.py  b721a6ea6d18_baseline_all_models.py  bb2d26c4951b_auto_20260617_111013.py
backend/app/: main.py
backend/app/core/: config.py  db.py  logging.py  migration.py  security.py
backend/app/llm/: client.py  schemas.py  validators.py
backend/app/models/: __init__.py  attempt_log.py  base.py  content_item.py  level_up_record.py  motivation_state.py  problem.py  refresh_token.py  review_record.py  study_session.py  user.py  user_profile.py
backend/app/repositories/: attempt_repo.py  content_repo.py  motivation_repo.py  refresh_token_repo.py  review_repo.py  study_session_repo.py  user_profile_repo.py  user_repo.py
backend/app/services/: auth_service.py  content_service.py  generation_service.py  level_up_service.py  motivation_service.py  placement_service.py  srs_service.py  study_service.py  weakness_service.py
backend/rules/: auth-flow.md  error-handling.md  layer-boundaries.md  llm-calls.md  schema-migrations.md
backend/scripts/: __init__.py  enrich_mcq_meaning.py  migrate.ps1  seed_content.py
backend/seeds/: grammar_n3.json  grammar_n4.json  vocabulary_n2.json  vocabulary_n3.json  vocabulary_n4.json  vocabulary_n5.json
docs/: architecture.md  (+5 more)
(+70 files in other folders)
